2007-06-07  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-window: actually, you need to use the macro always, there's
	no private pointer in the instance structure. We should have cleaned this up
	when we had the chance...
	
2007-06-07  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-window.c: do not get the private date from HildonWindow before
	it passes the g_return_if_fail check. Once it's passed the test, there's no
	need to g_assert that it exists. Do not create a HildonWindowPrivate variable
	if you are only going to access the data once. Whitespace cleanups.

2007-06-04  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: set children visible before allocation.
	* src/hildon-bread-crumb-widget.c: set xalign to 0.0 for labels.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.8-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: When destroying the window, remove (if exists) the
	escape timeout handler. Fixes #NB59276.

2007-06-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: When realizing the widget, set the window
	transiency. Setting the transiency in the gobject constructor is not
	good, as the widget is not realized at that point. Fixes: #NB56624.

2007-05-30  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.h (struct _HildonBreadCrumbTrailClass):
	Add padding for future expansions.

2007-05-30  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (hildon_bread_crumb_trail_class_init):
	Add a new signal "move-parent", bind Escape and BackSpace to it. The handler
	will fake an activation on the previous to the last item of the trail, so
	the effect can be overrided by the developer as usual.
	Also change the callback for the back button to do the same thing, so its
	effect can be overrided too. Fixes: NB#58982
